--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
                             <div class="site-identity">
                                 <img src="./logo.png" style="display: block; margin-left: auto; margin-right: auto; height: 10vh;">
                                 <!-- <h1 class="site-title"><a href="#page" rel="home">SBIM</a></h1> -->
-                                <h1 class="site-description">Activated Carbon Coco</h1>
+                                <h1 class="site-description">Team Ream</h1>
                             </div>
                         </div>
                         <div id="site-header-menu" class="site-header-menu">
